--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <input id="loginCode" type="text" placeholder="Access Code" style="width:100%; padding:10px; margin-bottom:14px; border-radius:8px; border:none;" />
       <button onclick="checkAccess()" style="width:100%; padding:12px; border:none; border-radius:10px; background:#2563eb; color:#fff; font-weight:bold; cursor:pointer;">Enter</button>
       <p id="loginMsg" style="margin-top:12px; color:#fca5a5;"></p>
-      <p style="margin-top:14px; font-size:.85rem; opacity:.8;">Not registered? Use the Registration section.</p>
+      <p id="loginRegister" style="margin-top:14px; font-size:.85rem; opacity:.9;">Don’t have an account?<br><a href="https://docs.google.com/forms/d/e/1FAIpQLScxKvkdafgDOi8_5gLJyXM1VpELidMFjaO9EAJtmjCF8_YBcA/viewform" target="_blank" style="color:#60a5fa; font-weight:bold; text-decoration:none;">Register first</a></p>
     </div>
   </div>
 
